alignment fixes in admin panel tabs

--- a/agent_dashboard.css
+++ b/agent_dashboard.css
@@ -2147,6 +2147,7 @@ body {
     margin: 0 2px;
   }
 
+  
   .nav-settings {
     margin-bottom: 0;
     margin-top: 0;
@@ -2359,7 +2360,6 @@ body {
   top: 0;
   left: 0;
   width: 100vw;
-  min-width: 0;
   z-index: 100;
   display: flex;
   align-items: flex-end;
@@ -2421,9 +2421,6 @@ body, .container {
 
 /* Favicon/icon */
 .tab-pro .favicon {
-    width: auto;
-    height: 19px;
-    border-radius: 4px;
     font-size: 14px;
 }
 
@@ -2437,9 +2434,7 @@ body, .container {
     cursor: pointer;
     position: absolute;
     right: 5px;
-    top: 6px;
-    padding: 0;
-    line-height: 1;
+    top: 5px;
     opacity: 1;
     transition: color 0.17s;
 }
